Add mypy config section

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,12 @@ known_first_party=rotkehlchen
 include_trailing_comma=1
 default_section=THIRDPARTY
 combine_as_imports=1
+
+[mypy]
+# Docs: https://mypy.readthedocs.io/en/latest/config_file.html
+ignore_missing_imports = True
+# check_untyped_defs = True
+# disallow_untyped_defs = True
+warn_unused_configs = True
+warn_unused_ignores = True
+warn_unreachable=True
