--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 gevent==1.5a2
-zerorpc==0.6.1
 web3==5.3.0
 pysqlcipher3==1.0.3
 requests==2.20.0
@@ -8,6 +7,13 @@ pycryptodomex==3.6.6
 coincurve==13.0.0
 psutil==5.4.3
 typing-extensions==3.7.4
+
+# For the rest api
+flask-cors==3.0.8
+flask-restful==0.3.7
+flask==1.1.1
+marshmallow==3.2.1
+webargs==5.5.2
 
 
 #constraints
