Some readme additions

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-custom: ['https://rotkehlchen.io/products/', 'https://github.com/rotkehlchenio/rotkehlchen#donations']
+custom: ['https://rotkehlchen.io/products/', 'https://github.com/rotkehlchenio/rotkehlchen#donations', 'https://gitcoin.co/grants/149/rotki']
 github: ['LefterisJP']
