--- a/electron-app/tsconfig.spec.json
+++ b/electron-app/tsconfig.spec.json
@@ -2,9 +2,9 @@
     "compilerOptions": {
         "outDir": "./tests/dist",
         "target": "es2016",
+        "module": "commonjs",
         "types": [
             "chai",
-            "chai-as-promised",
             "mocha",
             "node",
             "webdriverio"
