--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -1,49 +1,80 @@
 {
-    "name": "rotki",
-    "version": "1.0.5",
-    "license": "BSD-3-Clause",
-    "main": "main.js",
-    "dependencies": {
-        "cryptocurrency-icons": "0.16.0",
-        "datatables.net": "1.10.19",
-        "datatables.net-dt": "1.10.19",
-        "zerorpc-rotkehlchen": "0.1.0",
-        "tasklist": "4.0.0"
-    },
-    "devDependencies": {
-        "@types/chai": "4.1.7",
-        "@types/chai-as-promised": "7.1.0",
-        "@types/datatables.net": "1.10.13",
-        "@types/jquery": "3.3.29",
-        "@types/jquery.contextmenu": "1.7.34",
-        "@types/mocha": "5.2.5",
-        "@types/node": "8.10.38",
-        "@types/tail": "1.2.0",
-        "@types/webdriverio": "4.10.4",
-        "chai": "4.2.0",
-        "chai-as-promised": "7.1.1",
-        "dotenv": "6.1.0",
-        "electron": "3.0.12",
-        "electron-installer-dmg": "^3.0.0",
-        "electron-packager": "13.0.1",
-        "electron-rebuild": "1.8.2",
-        "lodash": ">=4.17.13",
-        "mocha": "6.1.4",
-        "promise-retry": "1.1.1",
-        "rimraf": "2.6.2",
-        "spectron": "5.0.0",
-        "ts-node": "7.0.1",
-        "tslint": "5.11.0",
-        "tslint-eslint-rules": "5.4.0",
-        "typescript": "3.2.1"
-    },
-    "scripts": {
-        "build": "rimraf dist && tsc",
-        "test": "rimraf dist && tsc && mocha --require dotenv/config --require ts-node/register \"tests/e2e/**/*.spec.ts\"",
-        "test-single": "rimraf dist && tsc && mocha --require dotenv/config --require ts-node/register",
-        "start": "rimraf dist && tsc && electron .",
-        "start:development": "rimraf dist && tsc && env ROTKEHLCHEN_ENVIRONMENT=development electron .",
-        "lint": "tslint -c tslint.json -e 'dist/*' --project tsconfig.json 'src/**/*.ts'",
-        "lint:fix": "tslint --fix -c tslint.json -e 'dist/*' --project tsconfig.json 'src/**/*.ts'"
-    }
+  "name": "rotki",
+  "version": "1.0.5",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test": "mocha --require dotenv/config --require ts-node/register \"tests/e2e/**/*.spec.ts\"",
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
+    "test:e2e": "vue-cli-service test:e2e",
+    "test:unit": "vue-cli-service test:unit"
+  },
+  "dependencies": {
+    "cryptocurrency-icons": "0.16.0",
+    "datatables.net": "1.10.19",
+    "datatables.net-dt": "1.10.19",
+    "eslint-config-prettier": "4.2.0",
+    "register-service-worker": "latest",
+    "vue": "2.6.10",
+    "vue-class-component": "7.1.0",
+    "vue-property-decorator": "8.1.1",
+    "vue-router": "3.0.6",
+    "vuex": "3.1.1",
+    "zerorpc-rotkehlchen": "0.1.0",
+    "tasklist": "4.0.0"
+  },
+  "devDependencies": {
+    "@types/chai": "4.1.7",
+    "@types/chai-as-promised": "7.1.0",
+    "@types/datatables.net": "1.10.13",
+    "@types/jest": "24.0.12",
+    "@types/jquery": "3.3.29",
+    "@types/jquery.contextmenu": "1.7.34",
+    "@types/mocha": "5.2.5",
+    "@types/node": "8.10.38",
+    "@types/webdriverio": "4.10.4",
+    "@vue/cli-plugin-babel": "3.7.0",
+    "@vue/cli-plugin-eslint": "3.7.0",
+    "@vue/cli-plugin-pwa": "3.7.0",
+    "@vue/cli-plugin-typescript": "^3.7.0",
+    "@vue/cli-plugin-unit-jest": "3.7.0",
+    "@vue/cli-service": "3.7.0",
+    "@vue/eslint-config-prettier": "4.0.1",
+    "@vue/eslint-config-typescript": "^4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "^24.8.0",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "dotenv": "8.0.0",
+    "electron": "3.0.12",
+    "electron-packager": "13.0.1",
+    "electron-rebuild": "1.8.4",
+    "eslint": "5.16.0",
+    "eslint-plugin-vue": "5.2.2",
+    "jest": "^24.8.0",
+    "mocha": "6.1.4",
+    "node-loader": "0.6.0",
+    "node-sass": "4.12.0",
+    "prettier": "^1.17.0",
+    "promise-retry": "1.1.1",
+    "rimraf": "2.6.2",
+    "sass-loader": "7.1.0",
+    "spectron": "5.0.0",
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.2",
+    "ts-jest": "24.0.2",
+    "ts-node": "7.0.1",
+    "typescript": "3.4.5",
+    "vue-cli-plugin-electron-builder": "1.3.2",
+    "vue-svg-loader": "^0.12.0",
+    "vue-template-compiler": "2.6.10"
+  },
+  "license": "BSD-3-Clause",
+  "main": "background.js"
 }
