--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -1,49 +1,40 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "allowJs": false,
-    "target": "es2016",
-    "declaration": true,
-    "sourceMap": true,
-    "inlineSources": true,
+    "target": "esnext",
+    "module": "esnext",
     "strict": true,
-    "module": "commonjs",
-    /* Enable all strict type-checking options. */
-    "noImplicitAny": true,
-    /* Raise error on expressions and declarations with an implied 'any' type. */
-    "strictNullChecks": true,
-    /* Enable strict null checks. */
-    "noImplicitThis": true,
-    /* Raise error on 'this' expressions with an implied 'any' type. */
-    "alwaysStrict": true,
-    /* Parse in strict mode and emit "use strict" for each source file. */
-    "noUnusedLocals": true,
-    /* Report errors on unused locals. */
-    "noUnusedParameters": true,
-    /* Report errors on unused parameters. */
-    "noImplicitReturns": true,
-    /* Report error when not all code paths in function return a value. */
-    "noFallthroughCasesInSwitch": true,
-    /* Report errors for fallthrough cases in switch statement. */
-    "typeRoots": [],
-    "types": [
-      "datatables.net",
-      "jquery",
-      "jquery.contextmenu",
-      "node",
-      "tail"
-    ],
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
     "baseUrl": ".",
+    "types": [
+      "webpack-env",
+      "jest"
+    ],
     "paths": {
-      "*": ["node_modules/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
-    "jsx": "react"
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
   },
   "include": [
-    "./src/**/*"
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
   ],
   "exclude": [
-    "./src/**/*.spec.ts",
-    "./tests"
+    "node_modules"
   ]
 }
