--- a/electron-app/tsconfig.spec.json
+++ b/electron-app/tsconfig.spec.json
@@ -4,8 +4,7 @@
         "target": "es2016",
         "module": "commonjs",
         "types": [
-            "chai",
-            "mocha",
+            "jest",
             "node",
             "webdriverio"
         ],
