--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -1,6 +1,10 @@
 {
   "name": "rotki",
   "version": "1.0.5",
+  "author": "Lefteris Karapetsas",
+  "description": "A portfolio tracking, asset analytics and tax reporting application specializing in Cryptoassets",
+  "repository": "https://github.com/rotkehlchenio/rotkehlchen",
+  "homepage": "https://rotkehlchen.io",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,7 +18,7 @@
   },
   "dependencies": {
     "bignumber.js": "9.0.0",
-    "cryptocurrency-icons": "0.16.0",
+    "cryptocurrency-icons": "0.16.1",
     "font-awesome": "4.7.0",
     "lodash": "4.17.15",
     "register-service-worker": "latest",
@@ -22,50 +26,47 @@
     "tasklist": "4.0.0",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
-    "vue-property-decorator": "8.2.2",
-    "vue-router": "3.1.2",
-    "vuetify": "2.0.11",
+    "vue-property-decorator": "8.3.0",
+    "vue-router": "3.1.3",
+    "vuetify": "2.1.9",
     "vuex": "3.1.1",
     "zerorpc-rotkehlchen": "0.1.0"
   },
   "devDependencies": {
-    "@types/jest": "24.0.15",
-    "@types/lodash": "4.14.136",
-    "@types/node": "12.6.8",
+    "@types/jest": "24.0.22",
+    "@types/lodash": "4.14.144",
+    "@types/node": "12.12.6",
     "@types/webdriverio": "4.10.4",
-    "@vue/cli-plugin-babel": "3.11.0",
-    "@vue/cli-plugin-eslint": "3.11.0",
-    "@vue/cli-plugin-pwa": "3.11.0",
-    "@vue/cli-plugin-typescript": "3.11.0",
-    "@vue/cli-plugin-unit-jest": "3.11.0",
-    "@vue/cli-service": "3.11.0",
+    "@vue/cli-plugin-babel": "3.12.1",
+    "@vue/cli-plugin-eslint": "3.12.1",
+    "@vue/cli-plugin-typescript": "3.12.1",
+    "@vue/cli-plugin-unit-jest": "3.12.1",
+    "@vue/cli-service": "3.12.1",
     "@vue/eslint-config-prettier": "5.0.0",
     "@vue/eslint-config-typescript": "4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.3",
-    "babel-jest": "24.8.0",
-    "dotenv": "8.1.0",
+    "babel-jest": "24.9.0",
+    "dotenv": "8.2.0",
     "electron": "3.1.13",
-    "electron-rebuild": "1.8.5",
     "eslint": "5.16.0",
-    "eslint-config-prettier": "6.1.0",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-vue": "5.2.3",
-    "eslint-plugin-vuetify": "^1.0.0-beta.4",
-    "jest": "24.8.0",
+    "eslint-config-prettier": "6.5.0",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-vue": "6.0.0",
+    "eslint-plugin-vuetify": "1.0.0-beta.5",
+    "jest": "24.9.0",
     "node-loader": "0.6.0",
     "prettier": "1.18.2",
     "promise-retry": "1.1.1",
     "rimraf": "3.0.0",
-    "sass": "1.22.10",
+    "sass": "1.23.3",
     "sass-loader": "7.3.1",
     "spectron": "5.0.0",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.3.0",
-    "typescript": "3.4.5",
+    "ts-jest": "24.1.0",
+    "typescript": "3.5.3",
     "vue-cli-plugin-electron-builder": "1.4.0",
-    "vue-cli-plugin-vuetify": "0.6.3",
+    "vue-cli-plugin-vuetify": "2.0.2",
     "vue-template-compiler": "2.6.10",
     "vuetify-loader": "1.3.0"
   },
