--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -38,6 +38,7 @@
     "@types/lodash": "4.14.144",
     "@types/node": "12.12.6",
     "@types/webdriverio": "4.10.4",
+    "@types/webpack": "^4.39.8",
     "@vue/cli-plugin-babel": "3.12.1",
     "@vue/cli-plugin-eslint": "3.12.1",
     "@vue/cli-plugin-typescript": "3.12.1",
