--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -23,42 +23,44 @@
     "font-awesome": "4.7.0",
     "lodash": "4.17.15",
     "roboto-fontface": "*",
-    "tasklist": "4.0.0",
+    "tasklist": "4.0.1",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "vue-property-decorator": "8.3.0",
     "vue-router": "3.1.3",
-    "vuetify": "2.1.9",
-    "vuex": "3.1.1",
+    "vuetify": "2.1.10",
+    "vuex": "3.1.2",
     "zerorpc-rotkehlchen": "0.1.0"
   },
   "devDependencies": {
-    "@types/jest": "24.0.22",
-    "@types/lodash": "4.14.144",
-    "@types/node": "12.12.6",
+    "@types/jest": "24.0.23",
+    "@types/lodash": "4.14.147",
+    "@types/node": "12.12.7",
     "@types/webdriverio": "4.10.4",
     "@types/webpack": "^4.39.8",
+    "@typescript-eslint/eslint-plugin": "2.7.0",
+    "@typescript-eslint/parser": "2.7.0",
     "@vue/cli-plugin-babel": "3.12.1",
     "@vue/cli-plugin-eslint": "3.12.1",
     "@vue/cli-plugin-typescript": "3.12.1",
     "@vue/cli-plugin-unit-jest": "3.12.1",
     "@vue/cli-service": "3.12.1",
     "@vue/eslint-config-prettier": "5.0.0",
-    "@vue/eslint-config-typescript": "4.0.0",
+    "@vue/eslint-config-typescript": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
     "dotenv": "8.2.0",
     "electron": "3.1.13",
-    "eslint": "5.16.0",
+    "eslint": "6.0.0",
     "eslint-config-prettier": "6.5.0",
     "eslint-plugin-prettier": "3.1.1",
-    "eslint-plugin-vue": "6.0.0",
+    "eslint-plugin-vue": "6.0.1",
     "eslint-plugin-vuetify": "1.0.0-beta.5",
     "jest": "24.9.0",
-    "node-loader": "0.6.0",
-    "prettier": "1.18.2",
+    "native-ext-loader": "^2.3.0",
+    "prettier": "1.19.1",
     "promise-retry": "1.1.1",
     "rimraf": "3.0.0",
     "sass": "1.23.3",
@@ -66,10 +68,10 @@
     "spectron": "5.0.0",
     "ts-jest": "24.1.0",
     "typescript": "3.5.3",
-    "vue-cli-plugin-electron-builder": "1.4.0",
+    "vue-cli-plugin-electron-builder": "1.4.1",
     "vue-cli-plugin-vuetify": "2.0.2",
     "vue-template-compiler": "2.6.10",
-    "vuetify-loader": "1.3.0"
+    "vuetify-loader": "1.3.1"
   },
   "license": "BSD-3-Clause",
   "main": "background.js"
