--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-vuetify": "1.0.0-beta.5",
     "jest": "24.9.0",
     "native-ext-loader": "^2.3.0",
+    "node-loader": "^0.6.0",
     "prettier": "1.19.1",
     "promise-retry": "1.1.1",
     "rimraf": "3.0.0",
