Fix packaging for Travis
install.sh from the tests template does pip install -r
requirements_dev.txt which is not needed when building the final
executable

--- a/.travis.yml
+++ b/.travis.yml
@@ -106,6 +106,7 @@ jobs:
 
     - stage: deploy
       <<: *job-template-linux
+      name: "Deploy Job"
       script:
         - source ./package.sh
       deploy:
@@ -122,6 +123,7 @@ jobs:
 
     - stage: deploy
       <<: *job-template-osx
+      name: "Deploy Job"
       script:
         - source ./package.sh
       deploy:
