--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ typing-extensions==3.7.4
 
 
 #constraints
-setuptools==40.4.2
+setuptools==40.6.2  # constraint required by pyinstaller==3.5.0
 eth-account==0.4.0
 eth-utils==1.8.0  # constraint required by web3==5.3.0
