--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,8 @@ combine_as_imports=1
 [mypy]
 # Docs: https://mypy.readthedocs.io/en/latest/config_file.html
 ignore_missing_imports = True
-check_untyped_defs = True
-disallow_untyped_defs = True
+# check_untyped_defs = True
+# disallow_untyped_defs = True
 warn_unused_configs = True
 warn_unused_ignores = True
 warn_unreachable=True
