Dissalow untyped defs everywhere except tests and data faker

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,24 @@ combine_as_imports=1
 [mypy]
 # Docs: https://mypy.readthedocs.io/en/latest/config_file.html
 ignore_missing_imports = True
-# check_untyped_defs = True
-# disallow_untyped_defs = True
+check_untyped_defs = True
+disallow_untyped_defs = True
 warn_unused_configs = True
 warn_unused_ignores = True
 warn_unreachable=True
+
+# These modules still need to have proper type definitions
+[mypy-rotkehlchen.tests.*]
+check_untyped_defs = False
+disallow_untyped_defs = False
+
+# Skipping strict typing for server.py since it's going to be completely
+# replaced once https://github.com/rotki/rotki/pull/526 is merged
+[mypy-rotkehlchen.server]
+check_untyped_defs = False
+disallow_untyped_defs = False
+
+# Data faker is a WIP so skip strict type checks
+[mypy-data_faker.*]
+check_untyped_defs = False
+disallow_untyped_defs = False
