Activate some more mypy rules and start using stubs

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,12 +18,18 @@ check_untyped_defs = True
 disallow_untyped_defs = True
 warn_unused_configs = True
 warn_unused_ignores = True
-warn_unreachable=True
+warn_unreachable = True
+warn_redundant_casts = True
+disallow_untyped_decorators = True
+disallow_untyped_calls = True
+mypy_path=./stubs/
 
 # These modules still need to have proper type definitions
 [mypy-rotkehlchen.tests.*]
 check_untyped_defs = False
 disallow_untyped_defs = False
+# Pytest's fixture decorators are not typed
+disallow_untyped_decorators = False
 
 # Skipping strict typing for server.py since it's going to be completely
 # replaced once https://github.com/rotki/rotki/pull/526 is merged
