--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "bignumber.js": "9.0.0",
+    "chart.js": "^2.9.3",
     "cryptocurrency-icons": "0.16.1",
     "font-awesome": "4.7.0",
     "lodash": "4.17.15",
+    "moment": "^2.24.0",
     "roboto-fontface": "*",
     "tasklist": "4.0.1",
     "vue": "2.6.10",
@@ -33,6 +35,7 @@
     "zerorpc-rotkehlchen": "0.1.0"
   },
   "devDependencies": {
+    "@types/chart.js": "2.9.3",
     "@types/jest": "24.0.23",
     "@types/lodash": "4.14.149",
     "@types/node": "12.12.14",
