--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -18,6 +18,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bignumber.js": "9.0.0",
     "chart.js": "^2.9.3",
     "cryptocurrency-icons": "0.16.1",
@@ -26,23 +27,22 @@
     "moment": "^2.24.0",
     "roboto-fontface": "*",
     "tasklist": "4.0.1",
-    "vue": "2.6.10",
+    "vue": "2.6.11",
     "vue-class-component": "7.1.0",
     "vue-property-decorator": "8.3.0",
     "vue-router": "3.1.3",
-    "vuetify": "2.1.13",
-    "vuex": "3.1.2",
-    "zerorpc-rotkehlchen": "0.1.0"
+    "vuetify": "2.1.15",
+    "vuex": "3.1.2"
   },
   "devDependencies": {
     "@types/chart.js": "2.9.3",
     "@types/jest": "24.0.23",
     "@types/lodash": "4.14.149",
-    "@types/node": "12.12.14",
+    "@types/node": "12.12.20",
     "@types/webdriverio": "4.13.3",
     "@types/webpack": "4.41.0",
-    "@typescript-eslint/eslint-plugin": "2.10.0",
-    "@typescript-eslint/parser": "2.10.0",
+    "@typescript-eslint/eslint-plugin": "2.12.0",
+    "@typescript-eslint/parser": "2.12.0",
     "@vue/cli-plugin-babel": "3.12.1",
     "@vue/cli-plugin-eslint": "3.12.1",
     "@vue/cli-plugin-typescript": "3.12.1",
@@ -55,26 +55,23 @@
     "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
     "dotenv": "8.2.0",
-    "electron": "3.1.13",
+    "electron": "6.1.7",
     "eslint": "6.7.2",
     "eslint-config-prettier": "6.7.0",
-    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-vue": "6.0.1",
-    "eslint-plugin-vuetify": "1.0.0-beta.5",
+    "eslint-plugin-vuetify": "1.0.0-beta.6",
     "jest": "24.9.0",
-    "native-ext-loader": "^2.3.0",
-    "node-loader": "^0.6.0",
     "prettier": "1.19.1",
     "promise-retry": "1.1.1",
-    "rimraf": "3.0.0",
     "sass": "1.23.7",
     "sass-loader": "7.3.1",
-    "spectron": "5.0.0",
+    "spectron": "8.0.0",
     "ts-jest": "24.2.0",
-    "typescript": "3.5.3",
-    "vue-cli-plugin-electron-builder": "1.4.3",
+    "typescript": "3.7.3",
+    "vue-cli-plugin-electron-builder": "1.4.4",
     "vue-cli-plugin-vuetify": "2.0.2",
-    "vue-template-compiler": "2.6.10",
+    "vue-template-compiler": "2.6.11",
     "vuetify-loader": "1.4.3"
   },
   "license": "BSD-3-Clause",
