--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -35,6 +35,7 @@
     "vuex": "3.1.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
     "@types/chart.js": "2.9.3",
     "@types/jest": "24.0.23",
     "@types/lodash": "4.14.149",
