Removes chai/mocha leftovers
Enables test folders on tsconfig.json

--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -39,6 +39,8 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
   ]
 }
