--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-vue": "6.0.1",
     "eslint-plugin-vuetify": "1.0.0-beta.6",
     "jest": "24.9.0",
+    "jest-junit": "^10.0.0",
     "prettier": "1.19.1",
     "promise-retry": "1.1.1",
     "sass": "1.23.7",
