--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-vue": "6.0.1",
     "eslint-plugin-vuetify": "1.0.0-beta.6",
+    "flush-promises": "^1.0.2",
     "jest": "24.9.0",
     "jest-junit": "^10.0.0",
     "prettier": "1.19.1",
