--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -6,6 +6,7 @@ flake8-commas==2.0.0
 flake8-bugbear==20.1.2
 flake8-tuple==0.4.1
 flake8-comprehensions==3.2.2
+flake8-debugger=3.2.1
 pep8-naming==0.9.1
 isort==4.3.4
 # Required for the ethereum related typing
