--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,12 +6,9 @@ tag = False
 [bumpversion:file:setup.py]
 serialize = {major}.{minor}.{patch}
 
-[bumpversion:file:package.json]
+[bumpversion:file:electron-app/package.json]
 serialize = {major}.{minor}.{patch}
 
 [bumpversion:file:docs/conf.py]
-serialize = {major}.{minor}.{patch}
-
-[bumpversion:file:ui/index.html]
 serialize = {major}.{minor}.{patch}
 
