--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -22,6 +22,7 @@
     "bignumber.js": "9.0.0",
     "chart.js": "^2.9.3",
     "cryptocurrency-icons": "0.16.1",
+    "electron-window-state": "^5.0.3",
     "font-awesome": "4.7.0",
     "lodash": "4.17.15",
     "moment": "^2.24.0",
