--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.2",
     "bignumber.js": "9.0.0",
     "chart.js": "^2.9.3",
+    "core-js": "^3.6.4",
     "cryptocurrency-icons": "0.16.1",
     "electron-window-state": "^5.0.3",
     "font-awesome": "4.7.0",
@@ -46,11 +47,13 @@
     "@types/webpack": "4.41.7",
     "@typescript-eslint/eslint-plugin": "2.23.0",
     "@typescript-eslint/parser": "2.23.0",
-    "@vue/cli-plugin-babel": "3.12.1",
-    "@vue/cli-plugin-eslint": "3.12.1",
-    "@vue/cli-plugin-typescript": "3.12.1",
-    "@vue/cli-plugin-unit-jest": "3.12.1",
-    "@vue/cli-service": "3.12.1",
+    "@vue/cli-plugin-babel": "~4.2.3",
+    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-typescript": "^4.2.3",
+    "@vue/cli-plugin-unit-jest": "^4.2.3",
+    "@vue/cli-plugin-vuex": "^4.2.3",
+    "@vue/cli-plugin-router": "^4.2.3",
+    "@vue/cli-service": "^4.2.3",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "5.0.2",
     "@vue/test-utils": "1.0.0-beta.32",
