Updating to electron 8.1.1
Dep up

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -42,17 +42,17 @@
     "@types/chart.js": "2.9.15",
     "@types/jest": "24.0.23",
     "@types/lodash": "4.14.149",
-    "@types/node": "12.12.20",
-    "@types/webdriverio": "4.13.3",
+    "@types/node": "12.12.30",
+    "@types/webdriverio": "^5.0.0",
     "@types/webpack": "4.41.7",
-    "@typescript-eslint/eslint-plugin": "2.23.0",
-    "@typescript-eslint/parser": "2.23.0",
+    "@typescript-eslint/eslint-plugin": "2.24.0",
+    "@typescript-eslint/parser": "2.24.0",
     "@vue/cli-plugin-babel": "~4.2.3",
     "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-router": "^4.2.3",
     "@vue/cli-plugin-typescript": "^4.2.3",
     "@vue/cli-plugin-unit-jest": "^4.2.3",
     "@vue/cli-plugin-vuex": "^4.2.3",
-    "@vue/cli-plugin-router": "^4.2.3",
     "@vue/cli-service": "^4.2.3",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "5.0.2",
@@ -61,7 +61,7 @@
     "babel-eslint": "10.1.0",
     "babel-jest": "24.9.0",
     "dotenv": "8.2.0",
-    "electron": "6.1.7",
+    "electron": "^8.1.1",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
@@ -74,10 +74,10 @@
     "promise-retry": "1.1.1",
     "sass": "1.26.3",
     "sass-loader": "8.0.2",
-    "spectron": "8.0.0",
+    "spectron": "^10.0.1",
     "ts-jest": "24.2.0",
     "typescript": "3.8.3",
-    "vue-cli-plugin-electron-builder": "1.4.6",
+    "vue-cli-plugin-electron-builder": "2.0.0-beta.5",
     "vue-cli-plugin-vuetify": "2.0.5",
     "vue-jest": "^3.0.5",
     "vue-template-compiler": "2.6.11",
