Adds preload to the webpack configuration

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -10,8 +10,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "lint:check": "vue-cli-service lint --no-fix --max-warnings 0",
-    "electron:build": "tsc --outDir dist src/preload.ts && vue-cli-service electron:build",
-    "electron:serve": "tsc --outDir dist src/preload.ts && vue-cli-service electron:serve",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "test:e2e": "jest --config tests/e2e/jest.config.js --runInBand",
