--- a/requirements_docs.txt
+++ b/requirements_docs.txt
@@ -1,8 +1,9 @@
 # This is the last release supported by releases. When
 # releases supports higher sphinx versions switch to them
-sphinx==1.7.8
+sphinx==1.8
 sphinx-autobuild==0.7.1
 sphinx_rtd_theme==0.4.3
 sphinxcontrib-httpdomain==1.7.0
 sphinxcontrib-httpexample==0.10.3
-releases==1.6.3
+# This is our fork of releases in order to handle https://github.com/rotki/rotki/issues/704
+rotki-releases
