--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -1,22 +1,24 @@
 {
   "name": "rotki",
   "version": "1.3.0",
-  "author": "Lefteris Karapetsas",
   "description": "A portfolio tracking, asset analytics and tax reporting application specializing in Cryptoassets",
-  "repository": "https://github.com/rotki/rotki",
-  "homepage": "https://rotki.com",
+  "author": "Lefteris Karapetsas",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:backend": "python -m rotkehlchen --api-port 4242 --api-cors http://localhost:8080",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e",
+    "test:integration": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e",
     "lint": "vue-cli-service lint",
-    "lint:check": "vue-cli-service lint --no-fix --max-warnings 0",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "lint:check": "vue-cli-service lint --no-fix --max-warnings 0",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "test:spectron": "jest --config tests/spectron/jest.config.js --runInBand",
-    "test:unit": "vue-cli-service test:unit"
+    "test:spectron": "jest --config tests/spectron/jest.config.js --runInBand"
   },
+  "main": "background.js",
   "dependencies": {
     "axios": "^0.19.2",
     "bignumber.js": "9.0.0",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@cypress/webpack-preprocessor": "^4.1.3",
     "@types/chart.js": "2.9.16",
     "@types/jest": "24.0.23",
     "@types/lodash": "4.14.149",
@@ -48,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "2.24.0",
     "@typescript-eslint/parser": "2.24.0",
     "@vue/cli-plugin-babel": "~4.2.3",
+    "@vue/cli-plugin-e2e-cypress": "^4.2.3",
     "@vue/cli-plugin-eslint": "^4.2.3",
     "@vue/cli-plugin-router": "^4.2.3",
     "@vue/cli-plugin-typescript": "^4.2.3",
@@ -75,6 +79,7 @@
     "sass": "1.26.3",
     "sass-loader": "8.0.2",
     "spectron": "^10.0.1",
+    "start-server-and-test": "^1.10.11",
     "ts-jest": "24.2.0",
     "typescript": "3.8.3",
     "vue-cli-plugin-electron-builder": "2.0.0-beta.5",
@@ -83,6 +88,7 @@
     "vue-template-compiler": "2.6.11",
     "vuetify-loader": "1.4.3"
   },
+  "homepage": "https://rotki.com",
   "license": "BSD-3-Clause",
-  "main": "background.js"
+  "repository": "https://github.com/rotki/rotki"
 }
