--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -9,7 +9,9 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
+    "test:e2e-ci": "vue-cli-service test:e2e --headless",
     "test:integration": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e",
+    "test:integration-ci": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e-ci",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
