Some more type definitions after putting __init__.py everywhere

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ disallow_untyped_decorators = True
 disallow_untyped_calls = True
 mypy_path=./stubs/
 
-# These modules still need to have proper type definitions
+# -- These modules still need to have proper type definitions given --
 [mypy-rotkehlchen.tests.*]
 check_untyped_defs = False
 disallow_untyped_defs = False
@@ -33,5 +33,10 @@ disallow_untyped_decorators = False
 
 # Data faker is a WIP so skip strict type checks
 [mypy-data_faker.*]
+check_untyped_defs = False
+disallow_untyped_defs = False
+
+# custom pylint checkers still need to be typed
+[mypy-tools.pylint.*]
 check_untyped_defs = False
 disallow_untyped_defs = False
