Disables integration testing for OSX
[ui tests]

--- a/.travis.yml
+++ b/.travis.yml
@@ -118,15 +118,15 @@ jobs:
       after_failure:
         - ./tools/scripts/screenshot_upload.py ./failure-screenshots
 
-    - stage: ui-test
-      <<: *job-template-osx
-      script:
-        - source terryfy/test_tools.sh
-        - cd ./electron-app
-        - npm ci
-        - npm run test:integration-ci
-      after_failure:
-        - ./tools/scripts/screenshot_upload.py ./failure-screenshots
+#    - stage: ui-test
+#      <<: *job-template-osx
+#      script:
+#        - source terryfy/test_tools.sh
+#        - cd ./electron-app
+#        - npm ci
+#        - npm run test:integration-ci
+#      after_failure:
+#        - ./tools/scripts/screenshot_upload.py ./failure-screenshots
 
     - stage: deploy
       <<: *job-template-linux
