--- a/.travis.yml
+++ b/.travis.yml
@@ -104,7 +104,7 @@ jobs:
     - stage: lint
       <<: *job-template-frontend
       script:
-        - npm run lint
+        - npm run lint:check
         - npm run build
 
     - stage: test
