--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -5,19 +5,19 @@
   "author": "Lefteris Karapetsas",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "serve:backend": "node start-backend.js",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:e2e-ci": "vue-cli-service test:e2e --headless",
-    "test:integration": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e",
-    "test:integration-ci": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e-ci",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "lint:check": "vue-cli-service lint --no-fix --max-warnings 0",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
+    "serve:backend": "node start-backend.js",
+    "test:e2e-ci": "vue-cli-service test:e2e --headless",
+    "test:integration": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e",
+    "test:integration-ci": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e-ci",
     "test:spectron": "jest --config tests/spectron/jest.config.js --runInBand"
   },
   "main": "background.js",
@@ -37,53 +37,53 @@
     "vue-class-component": "7.2.3",
     "vue-property-decorator": "8.4.1",
     "vue-router": "3.1.6",
-    "vuetify": "2.2.18",
+    "vuetify": "2.2.20",
     "vuex": "3.1.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@cypress/webpack-preprocessor": "^4.1.3",
-    "@types/chart.js": "2.9.16",
-    "@types/jest": "24.0.23",
+    "@babel/preset-env": "^7.9.5",
+    "@cypress/webpack-preprocessor": "^5.1.1",
+    "@types/chart.js": "2.9.18",
+    "@types/jest": "25.2.1",
     "@types/lodash": "4.14.149",
-    "@types/node": "12.12.30",
-    "@types/webdriverio": "^5.0.0",
-    "@types/webpack": "4.41.8",
-    "@typescript-eslint/eslint-plugin": "2.24.0",
-    "@typescript-eslint/parser": "2.24.0",
-    "@vue/cli-plugin-babel": "~4.2.3",
-    "@vue/cli-plugin-e2e-cypress": "^4.2.3",
-    "@vue/cli-plugin-eslint": "^4.2.3",
-    "@vue/cli-plugin-router": "^4.2.3",
-    "@vue/cli-plugin-typescript": "^4.2.3",
-    "@vue/cli-plugin-unit-jest": "^4.2.3",
-    "@vue/cli-plugin-vuex": "^4.2.3",
-    "@vue/cli-service": "^4.2.3",
+    "@types/node": "12.12.34",
+    "@types/webpack": "^4.41.10",
+    "@typescript-eslint/eslint-plugin": "2.27.0",
+    "@typescript-eslint/parser": "2.27.0",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-e2e-cypress": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-plugin-typescript": "^4.3.1",
+    "@vue/cli-plugin-unit-jest": "^4.3.1",
+    "@vue/cli-plugin-vuex": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "5.0.2",
     "@vue/test-utils": "1.0.0-beta.32",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "24.9.0",
+    "babel-jest": "25.2.6",
     "dotenv": "8.2.0",
-    "electron": "^8.1.1",
+    "electron": "^8.2.1",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-vue": "6.2.2",
     "eslint-plugin-vuetify": "1.0.0-beta.6",
     "flush-promises": "^1.0.2",
-    "jest": "24.9.0",
+    "jest": "25.2.7",
     "jest-junit": "^10.0.0",
-    "prettier": "1.19.1",
+    "prettier": "^2.0.4",
     "promise-retry": "1.1.1",
     "sass": "1.26.3",
     "sass-loader": "8.0.2",
     "spectron": "^10.0.1",
     "start-server-and-test": "^1.10.11",
-    "ts-jest": "24.2.0",
-    "typescript": "3.8.3",
+    "ts-jest": "25.3.1",
+    "typescript": "~3.8.3",
     "vue-cli-plugin-electron-builder": "2.0.0-beta.5",
     "vue-cli-plugin-vuetify": "2.0.5",
     "vue-jest": "^3.0.5",
