--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ templates:
     script:
       - .travis/run_tests.sh
     after_success:
-      - codecov
+      - codecov -F backend
 
   job-template-osx: &job-template-osx
     os: osx
@@ -113,12 +113,15 @@ jobs:
       <<: *job-template-frontend
       script:
         - npm run test:unit
+        - cd .. && bash <(curl -s https://codecov.io/bash) -c -F frontendunittests
 
     - stage: ui-test
       <<: *job-template-linux
       env: TESTS_TYPE='UI'
       after_failure:
         - ./tools/scripts/screenshot_upload.py ./failure-screenshots
+      after_success:
+        - cd .. && bash <(curl -s https://codecov.io/bash) -c -F frontendintegration
 
 #    - stage: ui-test
 #      <<: *job-template-osx
