--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -15,7 +15,7 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "serve:backend": "node start-backend.js",
-    "test:e2e-ci": "vue-cli-service test:e2e --headless",
+    "test:e2e-ci": "CODE_COVERAGE=true nyc vue-cli-service test:e2e --headless",
     "test:integration": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e",
     "test:integration-ci": "start-server-and-test serve:backend http://localhost:4242/api/1/version test:e2e-ci",
     "test:spectron": "jest --config tests/spectron/jest.config.js --runInBand"
@@ -44,6 +44,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
+    "@cypress/code-coverage": "^3.2.1",
     "@cypress/webpack-preprocessor": "^5.1.1",
     "@types/chart.js": "2.9.18",
     "@types/jest": "25.2.1",
@@ -66,6 +67,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "25.2.6",
+    "babel-plugin-istanbul": "^6.0.0",
     "dotenv": "8.2.0",
     "electron": "^8.2.1",
     "eslint": "6.8.0",
@@ -76,8 +78,10 @@
     "eslint-plugin-vue": "6.2.2",
     "eslint-plugin-vuetify": "1.0.0-beta.6",
     "flush-promises": "^1.0.2",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jest": "25.2.7",
     "jest-junit": "^10.0.0",
+    "nyc": "^15.0.1",
     "prettier": "^2.0.4",
     "promise-retry": "1.1.1",
     "sass": "1.26.3",
