--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -7,7 +7,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
+    "test:e2e": "CODE_COVERAGE=true vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
@@ -78,7 +78,6 @@
     "eslint-plugin-vue": "6.2.2",
     "eslint-plugin-vuetify": "1.0.0-beta.6",
     "flush-promises": "^1.0.2",
-    "istanbul-instrumenter-loader": "^3.0.1",
     "jest": "25.2.7",
     "jest-junit": "^10.0.0",
     "nyc": "^15.0.1",
@@ -86,6 +85,7 @@
     "promise-retry": "1.1.1",
     "sass": "1.26.3",
     "sass-loader": "8.0.2",
+    "source-map-support": "^0.5.16",
     "spectron": "^10.0.1",
     "start-server-and-test": "^1.10.11",
     "ts-jest": "25.3.1",
