Disable status updates for project and patch
[ui tests]

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -3,6 +3,11 @@ codecov:
   notify:
     wait_for_ci: true
 
+coverage:
+  status:
+    project: off
+    patch: off
+
 flags:
   backend:
     paths:
